--- a/pom.xml
+++ b/pom.xml
@@ -85,5 +85,30 @@
   		<artifactId>jsp-api</artifactId>
   		<version>2.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tiles</groupId>
+  		<artifactId>tiles-api</artifactId>
+  		<version>3.0.7</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tiles</groupId>
+  		<artifactId>tiles-core</artifactId>
+  		<version>3.0.7</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tiles</groupId>
+  		<artifactId>tiles-jsp</artifactId>
+  		<version>3.0.7</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tiles</groupId>
+  		<artifactId>tiles-servlet</artifactId>
+  		<version>3.0.7</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.tiles</groupId>
+  		<artifactId>tiles-template</artifactId>
+  		<version>3.0.7</version>
+  	</dependency>
   </dependencies>
 </project>
