--- a/pom.xml
+++ b/pom.xml
@@ -110,5 +110,10 @@
   		<artifactId>tiles-template</artifactId>
   		<version>3.0.7</version>
   	</dependency>
+  	<dependency>
+  		<groupId>javax.mail</groupId>
+  		<artifactId>mail</artifactId>
+  		<version>1.4.7</version>
+  	</dependency>
   </dependencies>
 </project>
