--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,10 @@
   		<artifactId>mail</artifactId>
   		<version>1.4.7</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context-support</artifactId>
+  		<version>4.3.7.RELEASE</version>
+  	</dependency>
   </dependencies>
 </project>
